grammar.js
    program: ($) => repeat($.statement),

    // Declarations

    class_declaration: ($) =>
      seq(
        repeat($.annotation),
        repeat($.class_attribut),
        choice('enum', 'class'),
        field('name', $._data_type),
        optional(field('superclass', seq('extends', $._data_type))),
        optional(
          field('interfaces', seq('implements', sep1($._data_type, ',')))
        ),
        field('body', $.statement)
      ),

    function_declaration: ($) =>
      seq(
        repeat($.annotation),
        repeat($.property_attribut),
        'fun',
        optional($.accessor),
        // awful way to allow function named 'get' or 'set'
        field('name', choice('get', 'set', $.identifier)),
        '(',
        field('parameters', optional($.function_parameters)),
        ')',
        optional(field('return_type', $.type_hint)),
        field('body', $.statement_block)
      ),

    function_parameters: ($) =>
      sep1(
        choice(
          seq(
            $.identifier,
            optional(field('type', $.type_hint)),
            optional(field('default', seq('=', $.expression)))
          ),
          $.rest
        ),
        ','
      ),

    variable_declaration: ($) =>
      seq(
        repeat($.annotation),
        repeat($.property_attribut),
        $._variable_declarator,
        ';'
      ),

    _variable_declarator: ($) =>
      seq(
        'var',
        field('name', $.identifier),
        optional(field('type', $.type_hint)),
        optional(seq('=', field('value', $.expression)))
      ),

    constant_declaration: ($) =>
      seq(
        repeat($.annotation),
        repeat($.property_attribut),
        'let',
        field('name', $.identifier),
        optional(field('type', $.type_hint)),
        optional(seq('=', field('value', $.expression))),
        ';'
      ),

    expression_statement: ($) => seq($._expressions, ';'),

    statement_block: ($) => seq('{', repeat($.statement), '}'),

    if_statement: ($) =>
      prec.right(
        seq(
          'if',
          field('condition', prec(PREC.PRIMARY + 10, $._expressions)),
          field('consequence', $.statement),
          optional(field('alternative', $.else_clause))
        )
      ),

    else_clause: ($) => seq('else', $.statement),

    for_in_statement: ($) =>
      seq(
        'for',
        '(',
        optional('var'),
        field(
          'left',
          seq(
            choice($.identifier, $.subscript_expression),
            optional($.type_hint)
          )
        ),
        'in',
        field('right', $.expression),
        ')',
        field('body', $.statement)
      ),

    while_statement: ($) =>
      seq(
        'while',
        field('condition', prec(PREC.PRIMARY + 10, $._expressions)),
        field('body', $.statement)
      ),

    try_statement: ($) =>
      seq(
        'try',
        field('body', $.statement_block),
        field('handler', repeat($.catch_clause)),
        optional(field('finalizer', $.finally_clause))
      ),
    catch_clause: ($) =>
      seq(
        'catch',
        //'(',
        field('parameter', $.identifier),
        optional(field('type', $.type_hint)),
        //')',
        field('body', $.statement_block)
      ),
    continue_statement: ($) =>
      seq('continue', optional(field('label', $.identifier)), ';'),

    return_statement: ($) => seq('return', optional($.expression), ';'),

    throw_statement: ($) => seq('throw', optional($.expression), ';'),

    _expressions: ($) => choice($.expression, $.sequence_expression),

    sequence_expression: ($) =>
      seq(
        field('left', $.expression),
        ',',
        field('right', choice($.expression, $.sequence_expression))
      ),

    subscript_expression: ($) =>
      prec(
        PREC.PRIMARY,
        seq(
          field('object', choice($.expression)),
          '[',
          field('index', $.expression),
          ']'
        )
      ),

    member_expression: ($) =>
      prec(
        PREC.PRIMARY,
        seq(
          field('object', choice($.expression)),
          '.',
          field(
            'property',
            choice($.identifier, '*', $.parenthesized_expression)
          )
        )
      ),

    parenthesized_expression: ($) =>
      prec(PREC.PRIMARY, seq('(', $._expressions, ')')),

    object: ($) =>
      prec(PREC.PRIMARY, seq('{', optional(sep1($.pair, ',')), '}')),

    pair: ($) =>
      seq(
        field('key', choice($.identifier, $.string, $.number)),
        ':',
        field('value', $.expression)
      ),

    array: ($) =>
      prec(PREC.PRIMARY + 1, seq('[', optional(sep1($.expression, ',')), ']')),

    call_expression: ($) =>
      prec(
        PREC.PRIMARY,
        seq(
          field('fun', $.identifier),
          '(',
          field('parameters', optional(sep1($.expression, ','))),
          ')'
        )
      ),

    assignment_expression: ($) =>
      prec(
        PREC.ASSIGNEMENT,
        seq(
          field(
            'left',
            choice($.member_expression, $.subscript_expression, $.identifier)
          ),
          '=',
          field('right', $.expression)
        )
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ['*', PREC.MULTIPLICATIVE],
          ['/', PREC.MULTIPLICATIVE],
          ['%', PREC.MULTIPLICATIVE],
          ['+', PREC.ADDITIVE],
          ['-', PREC.ADDITIVE],
          ['<<', PREC.BITWISE_SHIFT],
          ['>>', PREC.BITWISE_SHIFT],
          ['>>>', PREC.BITWISE_SHIFT],
          ['<', PREC.RELATIONAL],
          ['>', PREC.RELATIONAL],
          ['<=', PREC.RELATIONAL],
          ['>=', PREC.RELATIONAL],
          // ['as', PREC.RELATIONAL],
          ['in', PREC.RELATIONAL],
          ['instanceof', PREC.RELATIONAL],
          ['is', PREC.RELATIONAL],
          ['==', PREC.EQUALITY],
          ['!=', PREC.EQUALITY],
          ['===', PREC.EQUALITY],
          ['!==', PREC.EQUALITY],
          ['&', PREC.BITWISE_AND],
          ['^', PREC.BITWISE_XOR],
          ['|', PREC.BITWISE_OR],
          ['&&', PREC.LOGICAL_AND],
          ['and', PREC.LOGICAL_AND],
          ['||', PREC.LOGICAL_OR],
          ['or', PREC.LOGICAL_OR],
          ['??', PREC.CONDITIONAL],
          ['=>', PREC.CONDITIONAL],
        ].map(([op, pre]) =>
          prec.left(pre, seq($.expression, op, $.expression))
        )
      ),

    cast_expression: ($) =>
      prec.left(PREC.RELATIONAL, seq($.expression, 'as', optional(choice('!', '?')), $._data_type)),

    ternary_expression: ($) =>
      prec.right(
        PREC.CONDITIONAL,
        seq(
          field('condition', $.expression),
          '?',
          field('iftrue', $.expression),
          ':',
          field('iffalse', $.expression)
        )
      ),

    update_expression: ($) =>
      choice(
        prec(
          PREC.POSTFIX,
          seq(
            field('argument', $.expression),
            field('operator', choice('++', '--'))
          )
        ),
        prec(
          PREC.UNARY,
          seq(
            field('operator', choice('++', '--')),
            field('argument', $.expression)
          )
        )
      ),
    _data_type: ($) =>
      prec.right(
        choice(
          $.array_type,
          $.any_type,
          $.identifier,
          $.generic_data_type,
          $.scoped_data_type
        )
      ),

    generic_data_type: ($) =>
      seq(
        $.identifier,
        '.<',
        field('type_parameters', sep1($._data_type, ',')),
        '>'
      ),

    type_hint: ($) => seq(':',
      field('type', $._data_type),
      optional('?')
    ),

    // Primitive

    true: ($) => 'true',
    false: ($) => 'false',
    null: ($) => 'null',

    // from https://github.com/tree-sitter/tree-sitter-javascript/blob/master/grammar.js
    number: ($) => {
      const hex_literal = seq(choice('0x', '0X'), /[\da-fA-F](_*[\da-fA-F])*/)

      const decimal_digits = /\d(_*\d)*/
      const signed_integer = seq(optional(choice('-', '+')), decimal_digits)
      const exponent_part = seq(choice('e', 'E'), signed_integer)

      const binary_literal = seq(choice('0b', '0B'), /[0-1](_*[0-1])*/)

      const octal_literal = seq(choice('0o', '0O'), /[0-7](_*[0-7])*/)

      const bigint_literal = seq(
        choice(hex_literal, binary_literal, octal_literal, decimal_digits),
        'n'
      )

      const decimal_integer_literal = choice(
        '0',
        seq(optional('0'), /[1-9]/, optional(seq(repeat('_'), decimal_digits)))
      )

      const decimal_literal = choice(
        seq(
          decimal_integer_literal,
          '.',
          optional(decimal_digits),
          optional(exponent_part)
        ),
        seq('.', decimal_digits, optional(exponent_part)),
        seq(decimal_integer_literal, exponent_part),
        seq(decimal_digits)
      )

      // Numeric constants
      const nan = 'NaN'
      const pInfinity = 'Infinity'
      const mInfinity = '-Infinity'

      return token(
        choice(
          hex_literal,
          decimal_literal,
          binary_literal,
          octal_literal,
          bigint_literal,
          nan,
          pInfinity,
          mInfinity
        )
      )
    },

    // number: ($) =>
    //   choice(
    //     $._nan,
    //     $._pInfinity,
    //     $._mInfinity,
    //     $._hex_literal,
    //     $._decimal_literal
    //   ),

    // _hex_literal: ($) => seq(choice('0x', '0X'), /[0-9a-fA-F][0-9a-fA-F_]*/),
    // // _hex_literal: ($) => seq(choice('0x', '0X'), sep1(/[0-9a-fA-F]+/, /_+/)),
    // // TODO: Octal should be 0777 like numbers
    // // _oct_literal: ($) => '',

    // _integer_literal: ($) => /[0-9][0-9_]*/,
    // _exponential_part: ($) =>
    //   seq(choice('e', 'E'), optional(choice('+', '-')), $._integer_literal),
    // _decimal_literal: ($) =>
    //   prec.right(
    //     seq(
    //       $._integer_literal,
    //       optional(seq('.', $._integer_literal)),
    //       optional($._exponential_part)
    //     )
    //   ),

    // String literals

    // From tree-sitter-javascript string literal
    // https://github.com/tree-sitter/tree-sitter-javascript/blob/master/grammar.js
    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice($._unescaped_double_string_fragment, $._escape_sequence)
          ),
          '"'
        ),
        seq(
          "'",
          repeat(
            choice($._unescaped_single_string_fragment, $._escape_sequence)
          ),
          "'"
        ),
        seq(
          "`",
          repeat(
            choice($._unescaped_backtick_string_fragment, $._escape_sequence)
          ),
          "`"
        )
      ),

    _unescaped_double_string_fragment: ($) =>
      token.immediate(prec(1, /[^"\\]+/)),

    _unescaped_single_string_fragment: ($) =>
      token.immediate(prec(1, /[^'\\]+/)),

    _unescaped_backtick_string_fragment: ($) =>
      token.immediate(prec(1, /[^`\\]+/)),

    _escape_sequence: ($) =>
      token.immediate(
        seq(
          '\\',
          choice(
            /[^xu0-7]/,
            /[0-7]{1,3}/,
            /x[0-9a-fA-F]{2}/,
            /u[0-9a-fA-F]{4}/,
            /u{[0-9a-fA-F]+}/
          )
        )
      ),

    identifier: ($) => /[\p{L}_$#§@][\p{L}\p{Nd}_$#§@]*/,

    // Comments

    line_comment: ($) => token(seq('//', /[^\n]*/)),
